# digna-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
digna_sdk/: client.py
